# docs/swagger.json
@@ -998,9 +998,6 @@
         "/registrations": {
             "get": {
                 "description": "List all registration forms",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -1008,14 +1005,37 @@
                     "Registration"
                 ],
                 "summary": "List registration forms",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page size",
+                        "name": "page_size",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Search",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter by status (pending, approved, rejected, in_review)",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/registration.ListRegistrationFormsResponse"
-                            }
+                            "$ref": "#/definitions/resp.PaginationResponse-registration_ListRegistrationFormsResponse"
                         }
                     },
                     "400": {
@@ -1499,6 +1519,9 @@
                 "registrationFormId": {
                     "type": "string"
                 },
+                "status": {
+                    "type": "string"
+                },
                 "updatedAt": {
                     "type": "string"
                 }
@@ -1940,6 +1963,29 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/referring_orgs.ListReferringOrgsResponse"
+                    }
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "pageSize": {
+                    "type": "integer"
+                },
+                "totalCount": {
+                    "type": "integer"
+                },
+                "totalPages": {
+                    "type": "integer"
+                }
+            }
+        },
+        "resp.PaginationResponse-registration_ListRegistrationFormsResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/registration.ListRegistrationFormsResponse"
                     }
                 },
                 "page": {
